2643
Replying to [comment:1 SethTisue]:
> dupe of SI-1342? (though that ticket says it was fixed in r19320 and you're using r19367)



Thanks for your quick response. I just realized this is a duplicate of scala/bug#1342. **However**, scala/bug#1342 doesn't seem to be fixed on the latest nightly build r19367. So, if you make this (SI-2569) a duplicate of scala/bug#1342 and **reopen scala/bug#1342**, that would be great. 

Here is a full log of compile attempts: 
```scala
  mac-pro:src tatsuya$$ ls varargs/
  Child.scala		ChildImpl.scala		Parent.java		ParentInterface.java


  mac-pro:src tatsuya$$ javac -version
  javac 1.6.0_15


  mac-pro:src tatsuya$$ scalac -version
  Scala compiler version 2.8.0.r19367-b20091102023355 -- Copyright 2002-2009, LAMP/EPFL


  mac-pro:src tatsuya$$ javac varargs/Parent.java 


  mac-pro:src tatsuya$$ javac varargs/ParentInterface.java 


  mac-pro:src tatsuya$$ ls varargs/
  Child.scala		Parent.class		ParentInterface.class
  ChildImpl.scala		Parent.java		ParentInterface.java


  mac-pro:src tatsuya$$ scalac -cp . varargs/Child.scala 
  varargs/Child.scala:5: error: method concatenate overrides nothing
    override def concatenate(strings: String*): String =
                 ^
  one error found


  mac-pro:src tatsuya$$ scalac -cp . varargs/ChildImpl.scala 
  varargs/ChildImpl.scala:5: error: method concatenate overrides nothing
    override def concatenate(strings: String*): String =
                 ^
  one error found


  mac-pro:src tatsuya$$ ls -l 
  total 0
  drwxr-xr-x  5 tatsuya  staff  170 10 22 20:35 hello
  drwxr-xr-x  3 tatsuya  staff  102 10 22 09:16 jdo
  drwxr-xr-x  5 tatsuya  staff  170 10 22 20:38 staticcontext
  drwxr-xr-x  9 tatsuya  staff  306 11  4 13:47 varargs


  mac-pro:src tatsuya$$ ls varargs/
  Child.scala		Parent.class		ParentInterface.class
  ChildImpl.scala		Parent.java		ParentInterface.java


  mac-pro:src tatsuya$$ cat varargs/Parent.java 
  package varargs;
  
  public class Parent {
  
      public String concatenate(String... strings) {
          StringBuilder builder = new StringBuilder();
          for (String s : strings) {
              builder.append(s);
          }
          return builder.toString();
      }
  
  }


  mac-pro:src tatsuya$$ cat varargs/Child.scala 
  package varargs
  
  class Child extends Parent {
  
    override def concatenate(strings: String*): String =
      strings map("\"" + _ + "\"") mkString("(", ", ", ")")
  
  }


  mac-pro:src tatsuya$$ cat varargs/ParentInterface.java 
  package varargs;
  
  public interface ParentInterface {
  
      String concatenate(String... strings);
  
  }


  mac-pro:src tatsuya$$ cat varargs/ChildImpl.scala 
  package varargs
  
  class ChildImpl extends ParentInterface {
  
    override def concatenate(strings: String*): String =
      strings map("\"" + _ + "\"") mkString("(", ", ", ")")
  
  }
```
